src/Weather.css
.Weather {
  font-family: arial, sans-serif;
  border: 1px solid #dadde1;
  border-radius: 4px;
  color: rgb(135, 135, 135);
  padding: 16px;
  margin-top: 30px;
}

.Weather form {
  margin-bottom: 20px;
}

.Weather h1 {
  font-size: 24px;
  font-weight: 100;
  margin: 20px 0 0 0;
  line-height: 29px;
}

.Weather ul {
  margin: 0;
  padding: 0;
}

.Weather li {
  font-size: 16px;
  font-weight: 100;
  line-height: 19px;
  list-style: none;
}

